add file circle funny

--- a/LopHinhTron.html
+++ b/LopHinhTron.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>[Thực hành] Xây dựng lớp Hình Tròn</title>
-    <script src="../LopHinhTron.js"></script>
+    <script src="LopHinhTron.js"></script>
+
 </head>
 <body>
 
